--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,8 @@ jobs:
           commands: | # list of commands, specified as a valid JSON string
             [
               { "command": "updateData", "args": {"worksheetTitle": "Sheet1"}},
-              { "command": "updateData", "args": {"data": [["A1", "A2", "A3"]] }}
+              { "command": "updateData", "args": {"data": [["A1", "A2", "A3"]] }},
+              { "command": "appendData", "args": { "data": [["B1", "B2", "B3"]], "minCol": 1 }}
             ]
         env:
           GSHEET_CLIENT_EMAIL: ${{ secrets.SERVICE_EMAIL }}
