--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
           spreadsheetId: ${{secrets.SPREADSHEET_ID}}
           commands: | # list of commands, specified as a valid JSON string
             [
-              { "command": "updateData", "args": { "worksheetTitle": "Sheet1" }},
+              { "command": "updateData", "args": { "worksheetTitle": "Sheet1", "data": [["A1", "A2", "A3"]] }},
               { "command": "appendData", "args": { "worksheetTitle": "Sheet1", "data": [["B1", "B2", "B3"]], "minCol": 1 }}
             ]
         env:
