--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,13 +11,14 @@ jobs:
           spreadsheetId: ${{secrets.SPREADSHEET_ID}}
           commands: | # list of commands, specified as a valid JSON string
             [
-              { "command": "addWorksheet", "args": { "worksheetTitle": "generetedSheet" }},
-              { "command": "appendData", "args": { "worksheetTitle": "generetedSheet", "data": [["B1", "B2", "B3"]], "minCol": 1 }}
+              { "command": "updateData", "args": {"data": [["A1", "A2", "A3"]] }}
             ]
         env:
           GSHEET_CLIENT_EMAIL: ${{ secrets.SERVICE_EMAIL }}
           GSHEET_PRIVATE_KEY: ${{ secrets.SERVICE_KEY }}
         # { "command": "updateData", "args": {"data": [["A1", "A2", "A3"]] }},
+# { "command": "addWorksheet", "args": { "worksheetTitle": "generetedSheet" }},
+#               { "command": "appendData", "args": { "worksheetTitle": "generetedSheet", "data": [["B1", "B2", "B3"]], "minCol": 1 }}
                         # { "command": "updateData", "args": { "worksheetTitle": "Sheet1", "data": [["A1", "A2", "A3"]] }},
       - name: dump results
         env:
