--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
           commands: | # list of commands, specified as a valid JSON string
             [
               { "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": 2, "minRow": 3 }},
-              { "command": "getData", "args": { "worksheetTitle": "generetedSheet" } }
+              { "command": "getData", "args": { "worksheetTitle": "generetedSheet", "minCol": 1 } }
             ]
         env:
           GSHEET_CLIENT_EMAIL: ${{ secrets.SERVICE_EMAIL }}
