--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,12 +11,12 @@ jobs:
           spreadsheetId: ${{secrets.SPREADSHEET_ID}}
           commands: | # list of commands, specified as a valid JSON string
             [
-              { "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": 2, "minRow": 3 }},
               { "command": "getData", "args": { "worksheetTitle": "generetedSheet", "minCol": 1 } }
             ]
         env:
           GSHEET_CLIENT_EMAIL: ${{ secrets.SERVICE_EMAIL }}
           GSHEET_PRIVATE_KEY: ${{ secrets.SERVICE_KEY }}
+          # { "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": 2, "minRow": 3 }},
         # { "command": "updateData", "args": {"data": [["A1", "A2", "A3"]] }},
 # { "command": "addWorksheet", "args": { "worksheetTitle": "generetedSheet" }},
 #               { "command": "appendData", "args": { "worksheetTitle": "generetedSheet", "data": [["B1", "B2", "B3"]], "minCol": 1 }}
