--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
           spreadsheetId: ${{secrets.SPREADSHEET_ID}}
           commands: | # list of commands, specified as a valid JSON string
             [
-              { "command": "getData", "args": { "worksheetTitle": "generetedSheet", "minCol": 1 } }
+              { "command": "getData", "args": { "worksheetTitle": "generetedSheet", "minCol": 1, "maxCol": 1 } }
             ]
         env:
           GSHEET_CLIENT_EMAIL: ${{ secrets.SERVICE_EMAIL }}
