--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,4 +25,6 @@ jobs:
         env:
           #  the output of the action can be found in ${{ steps.update_worksheet.outputs.results }}
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
-        run: echo "$RESULTS"
+        run: |
+          echo "$.results[0].result.properties.title"
+          echo "$RESULTS"
