--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,8 @@ jobs:
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
         run: |
           function echo_test_run() {
-            local cmd=$(echo "${RESULTS}" | jq ".results[${1}].command.func")
+            local cmd=$(echo "${RESULTS}" | jq ".results[${1}].result.rawData")
             echo "${cmd} (${1})"
           }
           echo "$RESULTS"
-          echo_test_run 0
+          echo_test_run 1
