--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,9 +28,8 @@ jobs:
         uses: actions/github-script@v3
         with:
           script: |
-            function echo_test_run() {
-              local cmd=$(echo "${RESULTS}" | jq ".results[${1}].result.rawData")
-              echo "${cmd} (${1})"
+              echo "$RESULTS"
+              const cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
               for (const cells of cmd) {
                 if (cell === "A") {
                   echo "yes"
@@ -38,6 +37,3 @@ jobs:
                   echo "no"
                 }
               }
-            }
-            echo "$RESULTS"
-            echo_test_run 0
