--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,3 +32,7 @@ jobs:
            do       
           echo "$i"
           done
+          for i in cmd
+            do
+            echo "$i"
+            done
