--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,11 @@ jobs:
            do       
           echo "$i"
           done
-          for i in cmd
+          for i in "$cmd"
             do
             echo "$i"
             done
+          for index in ${!cmd[*]}
+          do
+              printf "%4d: %s\n" $index ${cmd[$index]}
+          done
