--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,9 @@ jobs:
         run: |
           echo "$RESULTS"
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
-          echo "$cmd[1]"
+          d = $(echo "${RESULTS}" | jq ".results[0].result.rawData[1][1]")
+          echo "$d"
+          echo "${cmd[1][1]}"
 
 
           
