--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
           d=$(echo "${RESULTS}" | jq ".results[0].result.rawData[1][1]")
           echo "$d"
-          echo "${cmd[1][1]}"
+          echo "$cmd"
 
 
           
