--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           echo "$RESULTS"
           for i in `seq 0 60`
-            c=$(echo "${RESULTS}" | jq ".results[0].result.rawData[$i][0]")
+            c=$(echo "${RESULTS}" | jq ".results[0].result.rawData[${i}][0]")
             echo "$c"
           do 
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
