--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,10 +27,7 @@ jobs:
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
         run: |
           echo "$RESULTS"
-          for i in `seq 0 60`
-            c=$(echo "${RESULTS}" | jq ".results[0].result.rawData[${i}][0]")
-            echo "$c"
-          do 
+          echo "${RESULTS[*]}"
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
           c=$(echo "${RESULTS}" | jq ".results[0].result.rawData[0][0]")
           echo "$c"
