--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,17 +27,14 @@ jobs:
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
         run: |
           echo "$RESULTS"
-          echo "${RESULTS[*]}"
-          for item in ${RESULTS[*]}
-          do
-              printf "Item:   %s\n" $item
-          done
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
           c=$(echo "${RESULTS}" | jq ".results[0].result.rawData[0][0]")
           echo "$c"
           d=$(echo "${RESULTS}" | jq ".results[0].result.rawData[1][0]")
           echo "$d"
           echo "$cmd"
+          
+          echo $(echo "${cmd}" | jq "[0][0]")
 
 
           
