--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
           echo "$d"
           echo "$cmd"
           
-          echo $(echo "${cmd}" | jq "[0][0]")
+          echo $(echo "${cmd}" | jq ".[0][0]")
 
 
           
