--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
           for i in `seq 0 60`
-            c=echo $(echo "${cmd}" | jq ".[$i][0]")
+            c=$(echo "${cmd}" | jq ".[$i][0]")
             echo "$c"
           do
 
