--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,9 +29,15 @@ jobs:
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
           gitid="d"
           echo "$gitid$
-          for i in {0..60}
+          for i in {0..4}
           do
             t=$(echo "${cmd}" | jq ".[$i][0]")
+            if [ "$gitid" = "$t" ];
+            then
+              echo "FOUND"
+            else 
+              echo "nope"
+            fi
             echo "$t"
           done
 
