--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,10 @@ jobs:
           pull_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
           echo "$pull_number"
           echo "$.pull_request.number"
+          echo "Infos"
+          echo "value: ${{ steps.infos.outputs.value }}"
+          echo "branch: ${{ steps.infos.outputs.branch }}"
+          echo "pull_request: ${{ steps.infos.outputs.pull_request }}"
 
 
           
