--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,6 +41,9 @@ jobs:
           echo "value: ${{ steps.infos.outputs.value }}"
           echo "branch: ${{ steps.infos.outputs.branch }}"
           echo "pull_request: ${{ steps.infos.outputs.pull_request }}"
+          echo "pull_request: ${{ steps.infos.outputs.pull_request.username }}"
+          echo "pull_request: ${{ steps.infos.outputs.pull_request[0] }}"
+          
 
 
           
