--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,6 +41,7 @@ jobs:
           echo "value: ${{ steps.infos.outputs.value }}"
           echo "branch: ${{ steps.infos.outputs.branch }}"
           echo "pull_request: ${{ steps.infos.outputs.pull_request }}"
+          git log -1 --pretty=format:'%an'
           
 
 
