--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,26 +22,46 @@ jobs:
 # { "command": "addWorksheet", "args": { "worksheetTitle": "generetedSheet" }},
 #               { "command": "appendData", "args": { "worksheetTitle": "generetedSheet", "data": [["B1", "B2", "B3"]], "minCol": 1 }}
                         # { "command": "updateData", "args": { "worksheetTitle": "Sheet1", "data": [["A1", "A2", "A3"]] }},
-      - uses: actions/checkout@v1
-      - name: Extract info
-        uses: ./ # Uses an action in the root directory
-        id: infos
-        with:
-          filter_push: '.commits[].author'
-          filter_pull_request: '.pull_request.commits'
       - name: dump results
         env:
           #  the output of the action can be found in ${{ steps.update_worksheet.outputs.results }}
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
         run: |
-          pull_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-          echo "$pull_number"
-          echo "$.pull_request.number"
-          echo "Infos"
-          echo "value: ${{ steps.infos.outputs.value }}"
-          echo "branch: ${{ steps.infos.outputs.branch }}"
-          echo "pull_request: ${{ steps.infos.outputs.pull_request }}"
+          cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
+          gitid="\"d\""
+          echo "$gitid"
+          for i in {0..60}
+          do
+            t=$(echo "${cmd}" | jq ".[$i][0]")
+            if [ "$gitid" = "$t" ];
+            then
+              echo "FOUND"
+            else 
+              echo "nope"
+            fi
+            echo "$t"
+          done
           git log -1 --pretty=format:'%an'
+#       - uses: actions/checkout@v1
+#       - name: Extract info
+#         uses: ./ # Uses an action in the root directory
+#         id: infos
+#         with:
+#           filter_push: '.commits[].author'
+#           filter_pull_request: '.pull_request.commits'
+#       - name: dump results
+#         env:
+#           #  the output of the action can be found in ${{ steps.update_worksheet.outputs.results }}
+#           RESULTS: ${{ steps.update_worksheet.outputs.results }}
+#         run: |
+#           pull_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+#           echo "$pull_number"
+#           echo "$.pull_request.number"
+#           echo "Infos"
+#           echo "value: ${{ steps.infos.outputs.value }}"
+#           echo "branch: ${{ steps.infos.outputs.branch }}"
+#           echo "pull_request: ${{ steps.infos.outputs.pull_request }}"
+#           git log -1 --pretty=format:'%an'
           
 
 
