--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,7 @@ jobs:
 # { "command": "addWorksheet", "args": { "worksheetTitle": "generetedSheet" }},
 #               { "command": "appendData", "args": { "worksheetTitle": "generetedSheet", "data": [["B1", "B2", "B3"]], "minCol": 1 }}
                         # { "command": "updateData", "args": { "worksheetTitle": "Sheet1", "data": [["A1", "A2", "A3"]] }},
+      - uses: actions/checkout@v1
       - name: dump results
         env:
           #  the output of the action can be found in ${{ steps.update_worksheet.outputs.results }}
