--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
         run: |
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
-          gitid=git log -1 --pretty=format:'%an'
+          gitid=$(git log -1 --pretty=format:'%an')
           echo "$gitid"
           for i in {0..60}
           do
