--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,9 @@ jobs:
             if [ "$gitid" = "$t" ];
             then
               echo "FOUND"
+              [
+                { "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": $i, "minRow": 2 }}
+              ]
             fi
           done
 #       - uses: actions/checkout@v1
