--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,13 @@ name: gsheet.action test
 on: push
 
 
-jobs:
+jobs:  
+  get_id_job:
+    name: Create version number
+    runs-on: ubuntu-latest
+    steps:
+      - id: get_id_step
+        run: echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
   fetch:
     runs-on: ubuntu-latest
     steps:
@@ -22,14 +28,14 @@ jobs:
 # { "command": "addWorksheet", "args": { "worksheetTitle": "generetedSheet" }},
 #               { "command": "appendData", "args": { "worksheetTitle": "generetedSheet", "data": [["B1", "B2", "B3"]], "minCol": 1 }}
                         # { "command": "updateData", "args": { "worksheetTitle": "Sheet1", "data": [["A1", "A2", "A3"]] }},
-      - uses: actions/checkout@v1
+                # \"$(git log -1 --pretty=format:'%an')\"
       - name: dump results
         env:
           #  the output of the action can be found in ${{ steps.update_worksheet.outputs.results }}
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
         run: |
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
-          gitid=\"$(git log -1 --pretty=format:'%an')\"
+          gitid=$(echo "${{ jobs.get_id_job.steps.get_id_step.outputs.id }}")
           echo "$gitid"
           for i in {0..60}
           do
