--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,18 +6,16 @@ jobs:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
+      output_id: ${{ steps.step1.outputs.id }}
     steps:
-    - id: step1
-      run: echo "::set-output name=test::hello"
-    - id: step2
-      run: echo "::set-output name=test::world"
+      - uses: actions/checkout@v1
+      - id: step1
+        run: echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
   job2:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-    - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
+    - run: echo ${{needs.job1.outputs.output_id}}
 
 # jobs:  
 #   get_id_job:
