--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,46 @@ jobs:
     - run: |
         gitid=${{needs.job1.outputs.output_id}}
         echo "$gitid"
-
+  fetch:
+    runs-on: ubuntu-latest
+    steps:
+      - id: 'update_worksheet'
+        uses: jroehl/gsheet.action@v1.0.0 # you can specify '@release' to always have the latest changes
+        with:
+          spreadsheetId: ${{secrets.SPREADSHEET_ID}}
+          commands: | # list of commands, specified as a valid JSON string
+            [
+              { "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": ${{needs.job1.outputs.output_id}}, "minRow": 2 }}
+            ]
+        env:
+          GSHEET_CLIENT_EMAIL: ${{ secrets.SERVICE_EMAIL }}
+          GSHEET_PRIVATE_KEY: ${{ secrets.SERVICE_KEY }}
+          #{ "command": "getData", "args": { "worksheetTitle": "generetedSheet", "minCol": 1, "maxCol": 1 } },
+          # { "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": 2, "minRow": 3 }},
+        # { "command": "updateData", "args": {"data": [["A1", "A2", "A3"]] }},
+# { "command": "addWorksheet", "args": { "worksheetTitle": "generetedSheet" }},
+#               { "command": "appendData", "args": { "worksheetTitle": "generetedSheet", "data": [["B1", "B2", "B3"]], "minCol": 1 }}
+                        # { "command": "updateData", "args": { "worksheetTitle": "Sheet1", "data": [["A1", "A2", "A3"]] }},
+                # \"$(git log -1 --pretty=format:'%an')\"
+#       - name: dump results
+#         env:
+#           #  the output of the action can be found in ${{ steps.update_worksheet.outputs.results }}
+#           RESULTS: ${{ steps.update_worksheet.outputs.results }}
+#         run: |
+#           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
+#           gitid=$(echo "${{ jobs.get_id_job.steps.get_id_step.outputs.id }}")
+#           echo "$gitid"
+#           for i in {0..60}
+#           do
+#             t=$(echo "${cmd}" | jq ".[$i][0]")
+#             if [ "$gitid" = "$t" ];
+#             then
+#               echo "FOUND"
+#               [
+#                 { "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": $i, "minRow": 2 }}
+#               ]
+#             fi
+#           done
 # jobs:  
 #   get_id_job:
 #     name: Create version number
