--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,7 @@ jobs:
         run: echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
   job2:
     runs-on: ubuntu-latest
+    needs: job1
     steps:
       - id: 'update_worksheet'
         uses: jroehl/gsheet.action@v1.0.0 # you can specify '@release' to always have the latest changes
