--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
         run: |
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
-          gitid=${{needs.job1.outputs.output_id}}
+          gitid=\"${{needs.job1.outputs.output_id}}\"
           for i in {0..60}
           do
             t=$(echo "${cmd}" | jq ".[$i][0]")
