--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,8 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: job1
+    outputs:
+      output_id_number: ${{ steps.step1.outputs.id }}
     steps:
       - id: 'update_worksheet'
         uses: jroehl/gsheet.action@v1.0.0 # you can specify '@release' to always have the latest changes
@@ -26,7 +28,8 @@ jobs:
         env:
           GSHEET_CLIENT_EMAIL: ${{ secrets.SERVICE_EMAIL }}
           GSHEET_PRIVATE_KEY: ${{ secrets.SERVICE_KEY }}
-      - name: dump results
+      - id: step1
+        name: dump results
         env:
           #  the output of the action can be found in ${{ steps.update_worksheet.outputs.results }}
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
@@ -40,10 +43,18 @@ jobs:
             then
               echo "FOUND"
               echo "$i"
+              echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
             fi
           done
           echo "$gitid"
-
+  job3:
+    runs-on: ubuntu-latest
+    needs: job2
+    steps:
+    - id: step1
+      run: |
+        gitid=${{needs.job2.outputs.output_id_number}}
+        echo "$gitid"
 
 #       - uses: actions/checkout@v1
 #       - name: Extract info
