--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,7 +43,7 @@ jobs:
             then
               echo "FOUND"
               echo "$i"
-              echo "::set-output name=id::\"$(git log -1 --pretty=format:'%an')\""
+              echo "::set-output name=id::$i"
             fi
           done
           echo "$gitid"
