--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,6 +44,7 @@ jobs:
               echo "FOUND"
               echo "$i"
               j="[{ "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": ${{needs.job2.outputs.output_id_number}}, "minRow": 2 }} ]"
+              echo "$j"
               echo "::set-output name=id::$j"
             fi
           done
