--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,9 +36,11 @@ jobs:
         run: |
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
           gitid=\"${{needs.job1.outputs.output_id}}\"
-          for i in {0..60}
+          for i in {0..5}
           do
             t=$(echo "${cmd}" | jq ".[$i][0]")
+            echo "$t"
+            echo "$gitid"
             if [ "$gitid" = "$t" ];
             then
               echo "FOUND"
