--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,7 @@ jobs:
           RESULTS: ${{ steps.update_worksheet.outputs.results }}
         run: |
           cmd=$(echo "${RESULTS}" | jq ".results[0].result.rawData")
+          echo "$cmd"
           gitid=\"${{needs.job1.outputs.output_id}}\"
           for i in {0..5}
           do
@@ -43,6 +44,10 @@ jobs:
             echo "$gitid"
             if [ "$t" = "$gitid" ]; then
               echo "FOUND"
+              echo "$i"
+              j="[{ "command": "updateData", "args": {"worksheetTitle": "generetedSheet", "data": [["yes"]], "minCol": ${{needs.job2.outputs.output_id_number}}, "minRow": 2 }} ]"
+              echo "$j"
+              echo "::set-output name=id::$j"
             else
               echo "Strings are not equal."
             fi
